<resources>
    <string name="app_name">Nabscom</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_customer">Customer Care</string>
    <string name="menu_account">Account</string>

    <string name="action_settings">Settings</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="price">Price</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="slogan">NABSCOM INVENTORY APP</string>
</resources>